--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -45,6 +45,7 @@
     display: flex;
     align-items: center;
     gap:45px;
+    cursor: pointer;
 
 }
 .nav-login-cart button{
@@ -132,6 +133,7 @@
         width: 80px;
         height: 35px;
         font-size: 14px;
+        cursor: pointer;
 
     }
     .nav-login-cart img{
