--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-   margin-bottom: 100px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 .new-collections h1{
     color: #171717;
