--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -153,10 +153,12 @@
         padding: 10px 0px;
     }
     .nav-dropdown{
+    
 display: block;
 width: 30px;
 rotate: -90deg;
 transition: 0.5s;
+padding: 0px 60px;
     }
    
     .nav-menu{
@@ -184,14 +186,22 @@ transition: 0.5s;
        width: 8px 0px;
        gap: 0;
     }
-.nav-logo{
+
+    .nav-dropdown{
+    
+        display: block;
+        width: 30px;
+        rotate: -90deg;
+        transition: 0.5s;
+        padding: 0px 140px;
+            }
+           
+
+.nav-logo{ 
     transform: scale(0.8);
 }
-
-  
-   
     .nav-menu{
-       
+   
         height: 70px;
         top: 50px;    
 
